--- a/openatlas/api/v02/endpoints/swagger/code.yml
+++ b/openatlas/api/v02/endpoints/swagger/code.yml
@@ -24,6 +24,7 @@ parameters:
   - $ref: '#/components/parameters/firstParam'
   - $ref: '#/components/parameters/lastParam'
   - $ref: '#/components/parameters/showParam'
+  - $ref: '#/components/parameters/typeParam'
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
 responses:
