--- a/openatlas/api/v02/endpoints/swagger/latest.yml
+++ b/openatlas/api/v02/endpoints/swagger/latest.yml
@@ -14,7 +14,7 @@ parameters:
   - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
-    description: A json with a result list and pagination information (null)
+    description: A json with a result list and pagination information
     content:
       application/ld+json:
         schema:
