--- a/openatlas/api/v02/endpoints/swagger/class_mapping.yml
+++ b/openatlas/api/v02/endpoints/swagger/class_mapping.yml
@@ -9,6 +9,8 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/ClassMappingModel'
+          type: array
+          items:
+            $ref: '#/components/schemas/ClassMappingModel'
   '404':
     description: Something went wrong. Please consult the error message.
