--- a/openatlas/api/v02/endpoints/swagger/code.yml
+++ b/openatlas/api/v02/endpoints/swagger/code.yml
@@ -34,6 +34,8 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/OutputModel'
+          oneOf:
+            - $ref: '#/components/schemas/OutputModelLPF'
+            - $ref: '#/components/schemas/OutputModelGeojson'
   '404':
     description: Something went wrong. Please consult the error message.
