--- a/openatlas/api/v02/endpoints/swagger/entity.yml
+++ b/openatlas/api/v02/endpoints/swagger/entity.yml
@@ -20,7 +20,9 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/LinkedPlaceModel'
+          oneOf:
+           - $ref: '#/components/schemas/LinkedPlaceModel'
+           - $ref: '#/components/schemas/GeometryModel'
   '404':
     description: Something went wrong. Please consult the error message.
 
