--- a/openatlas/api/v02/endpoints/swagger/latest.yml
+++ b/openatlas/api/v02/endpoints/swagger/latest.yml
@@ -9,7 +9,9 @@ parameters:
     description: The amount of last enterd entities to be retrieved (Valid numbers between and including 1 and 100)
     required: true
     schema:
-      type: number
+      type: integer
+      minimum: 1
+      maximum: 100
   - $ref: '#/components/parameters/showParam'
   - $ref: '#/components/parameters/downloadParam'
   - $ref: '#/components/parameters/formatParam'
@@ -20,6 +22,8 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/LatestModel'
+          oneOf:
+            - $ref: '#/components/schemas/OutputModelLPF'
+            - $ref: '#/components/schemas/OutputModelGeojson'
   '404':
     description: Something went wrong. Please consult the error message.
