--- a/openatlas/api/v02/endpoints/swagger/overview_count.yml
+++ b/openatlas/api/v02/endpoints/swagger/overview_count.yml
@@ -10,6 +10,8 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/OverviewCountModel'
+          type: array
+          items:
+            $ref: '#/components/schemas/OverviewCountModel'
   '404':
     description: Something went wrong. Please consult the error message.
