--- a/openatlas/api/v02/endpoints/swagger/type_entities_all.yml
+++ b/openatlas/api/v02/endpoints/swagger/type_entities_all.yml
@@ -28,6 +28,8 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/TypeTreeModel'
+          oneOf:
+            - $ref: '#/components/schemas/OutputModelLPF'
+            - $ref: '#/components/schemas/OutputModelGeojson'
   '404':
     description: Something went wrong. Please consult the error message.
