--- a/openatlas/api/v03/endpoints/swagger/latest.yml
+++ b/openatlas/api/v03/endpoints/swagger/latest.yml
@@ -19,6 +19,8 @@ responses:
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/LatestModel'
+          oneOf:
+            - $ref: '#/components/schemas/OutputModelLPF'
+            - $ref: '#/components/schemas/OutputModelGeojson'
   '404':
     description: Something went wrong. Please consult the error message.
