--- a/openatlas/api/v03/endpoints/swagger/subunits.yml
+++ b/openatlas/api/v03/endpoints/swagger/subunits.yml
@@ -2,22 +2,23 @@ Node endpoint
 ---
 tags:
   - Nodes
-description: Todo
+description: Displays all subunits of a place in a special Thanados format
 parameters:
   - in: path
     name: id_
-    description: The ID of an entity, which has to be a node
+    description: The ID of an place entity
     required: true
     schema:
-      type: number
+      type: integer
   - $ref: '#/components/parameters/countParam'
   - $ref: '#/components/parameters/downloadParam'
+  - $ref: '#/components/parameters/formatParam'
 responses:
   '200':
-    description: A list of node entities linked to the given node
+    description: A list of all subunits of the given place
     content:
       application/ld+json:
         schema:
-          $ref: '#/components/schemas/NodeAllModel'
+          $ref: '#/components/schemas/SubunitsModel'
   '404':
     description: Something went wrong. Please consult the error message.
